# GEOMAR-Dashboard

./: .gitignore  Copernicus.py  Copernicus_data.ipynb  Datenstruktur.drawio  Dockerfile  Dockerfile-FastApi  Layout.py  Layout_old.py  app.py  docker-compose.yaml  fast_api_structure.json  frost_server.py  interactive_map.html  main.py  marinas.json  preload_data.json  pyproject.toml  requirements.txt  test.ipynb  test.py  test2.ipynb  test2.py  todo.mk  vis.py
.devcontainer/: devcontainer.json
.github/workflows/: keep_alive.yml
app/: Layout.py  requirements.txt
app/backend/: fast_api.py  requirements.txt  test.ipynb
app/backend/utils/: OpenMeteoWeather.py
app/data/: marinas.json
app/frontend/: app.py  app_copy.py  requirements.txt  test.ipynb
app/frontend/utils/: Copernicus.py  OpenMeteoWeather.py  Visualisations.py  data_loader.py  data_loader_v02.py
templates/: plot.html
utils/: Copernicus.py  OpenMeteoWeather.py  PlanetPositions.py  frost_server.py
v02/backend/: Layout.py  requirements.txt
v02/backend/utils/: frost_server.py
v02/frontend/: app.py  requirements.txt
v02/frontend/archive/: test2.py  test3.py  v01_app.py
v02/frontend/utils/: OpenMeteoMarine.py  Visualisations.py  data_loader_v02.py  test.py
v03/backend/: fast_api copy.py  fast_api.py  test.ipynb
v03/backend/utils/: Copernicus.py
v03/frontend/: app.py  requirements.txt  test.ipynb
v03/frontend/utils/: FrostServer.py  OpenMeteoWeather.py  Visualisations.py  data_loader.py  data_loader_v02.py
v04/frontend/: app.py  requirements.txt  test.ipynb
(+13 files in other folders)
