[project]
name = "geomar-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "copernicusmarine>=2.0.1",
    "datetime>=5.5",
    "folium>=0.19.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "openmeteo-requests>=1.4.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "streamlit>=1.44.1",
    "streamlit-folium>=0.25.0",
    "xarray>=2025.3.1",
]
